правки к Начинаем разметку личного проекта

--- a/catalog.html
+++ b/catalog.html
@@ -1,96 +1,93 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>City of Sedona</title>
-  </head>
-   <body>
-    <header class="main-header">
-      <nav class="main-navigation">
-        <a class="main-header-logo" href="index.html">
-          <img src="http://placehold.it/150x100" width="73" height="56" alt="Логотип City of Sedona">
-        </a>              
-        <ul class="site-navigation">
-          <li><a href="info.html">Информация</a></li>
-          <li><a href="gallery.html">Фото и видео</a></li>
-          <li><a href="state-map.html">Карта Штата</a></li>
-          <li class="site-navigation-current"><a href="catalog.html">Гостиницы</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main class="container">
-      <section class="filters">
-      <h1 class="visually-hidden">Фильтры</h1>
-      <!--форма-->
-      </section>
-      <section class="hotels">
-        <h1 class="visually-hidden">Список гостиниц</h1>
-        <ul class="hotels-list">
-          
-          <li class="hotels-list-item">
-            <h2>Amara resort & spa</h2>
-            <p class=hotels-list-image>
-              <a href="#">
-               <img src="http://placehold.it/150x100" width="140" height="90" alt="Amara resort & spa">
-              </a>
-            </p>
-            <ul class="hotels-list-item-parametr">
-              <li>Гостиница</li>
-              <li><b>От 4000 р.</b></li>
-              <li class="hotels-list-item-rating">Рейтинг 8.5</li>
-            </ul>
-            <a class="button" href="#">Подробнее</a>
-            <a class="button" href="#">Забронировать</a>
-            <img src="http://placehold.it/150x100" width="94" height="20" alt="Star4">
-            </li>
-          <li class="hotels-list-item">
-            <h2>Desert Quail Inn</h2>
-            <p class=hotels-list-image>
-              <a href="#">
-               <img src="http://placehold.it/150x100" width="140" height="90" alt="Desert Quail Inn">
-              </a>
-            </p>
-            <ul class="hotels-list-item-parametr">
-              <li>Мотель</li>
-              <li><b>От 3000 р.</b></li>
-              <li class="hotels-list-item-rating">Рейтинг 8.9</li>
-            </ul>            
-            <a class="button" href="#">Подробнее</a>
-            <a class="button" href="#">Забронировать</a>
-            <img src="http://placehold.it/150x100" width="70" height="20" alt="Star3">
-          </li>
-          <li class="hotels-list-item">
-            <h2>Villas at Poco Diablo</h2>
-            <p class=hotels-list-image>
-              <a href="#">
-               <img src="http://placehold.it/150x100" width="140" height="90" alt="Villas at Poco Diablo">
-              </a>
-            </p>
-            <ul class="hotels-list-item-parametr">
-              <li>Апартаменты</li>
-              <li><b>От 2000 р.</b></li>
-              <li class="hotels-list-item-rating">Рейтинг 9.2</li>
-            </ul>  
-            <a class="button" href="#">Подробнее</a>
-            <a class="button" href="#">Забронировать</a>
-            <img src="http://placehold.it/150x100" width="45" height="20" alt="Star2">
-          </li>
-        </ul>
-       </section>
-      </main>
-    <footer class="main-footer">
-      <p class="footer-text">#VISITSEDONA</p>
-      <div class="footer-social">
-        <ul>
-        <li><a class="social-button" href="#">Twitter</a></li>
-        <li><a class="social-button" href="#">Facebook</a></li>
-        <li><a class="social-button" href="#">Youtube</a></li>
+<head>
+  <meta charset="utf-8">
+  <title>City of Sedona</title>
+</head>
+<body>
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-header-logo" href="index.html">
+        <img src="http://placehold.it/150x100" width="73" height="56" alt="Логотип City of Sedona">
+      </a>              
+      <ul class="site-navigation">
+        <li><a href="info.html">Информация</a></li>
+        <li><a href="gallery.html">Фото и видео</a></li>
+        <li><a href="state-map.html">Карта Штата</a></li>
+        <li class="site-navigation-current"><a href="catalog.html">Гостиницы</a></li>
       </ul>
-      </div>
-      <p class="footer-copyright">
-        <b>Website by</b> 
-        <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-      </p>
-    </footer>
+    </nav>
+  </header>
+  <main class="container">
+    <section class="filters">
+      <h1 class="visually-hidden">Поиск жилья в Cедоне</h1>
+      <!--форма-->
+    </section>
+    <section class="hotels">
+      <h2 class="visually-hidden">Список гостиниц</h2>
+      <ul class="hotels-list">
+        
+        <li class="hotels-list-item">
+          <h3>Amara resort & spa</h3>
+          <p class=hotels-list-image>
+            <a href="#">
+             <img src="http://placehold.it/150x100" width="140" height="90" alt="Amara resort & spa">
+           </a>
+         </p>
+         <ul class="hotels-list-item-parametr">
+          <li>Гостиница</li>
+          <li><b>От 4000 р.</b></li>
+          <li class="hotels-list-item-rating">Рейтинг 8.5</li>
+        </ul>
+        <a class="button" href="#">Подробнее</a>
+        <a class="button" href="#">Забронировать</a>
+      </li>
+      <li class="hotels-list-item">
+        <h3>Desert Quail Inn</h3>
+        <p class=hotels-list-image>
+          <a href="#">
+           <img src="http://placehold.it/150x100" width="140" height="90" alt="Desert Quail Inn">
+         </a>
+       </p>
+       <ul class="hotels-list-item-parametr">
+        <li>Мотель</li>
+        <li><b>От 3000 р.</b></li>
+        <li class="hotels-list-item-rating">Рейтинг 8.9</li>
+      </ul>            
+      <a class="button" href="#">Подробнее</a>
+      <a class="button" href="#">Забронировать</a>
+    </li>
+    <li class="hotels-list-item">
+      <h3>Villas at Poco Diablo</h3>
+      <p class=hotels-list-image>
+        <a href="#">
+         <img src="http://placehold.it/150x100" width="140" height="90" alt="Villas at Poco Diablo">
+       </a>
+     </p>
+     <ul class="hotels-list-item-parametr">
+      <li>Апартаменты</li>
+      <li><b>От 2000 р.</b></li>
+      <li class="hotels-list-item-rating">Рейтинг 9.2</li>
+    </ul>  
+    <a class="button" href="#">Подробнее</a>
+    <a class="button" href="#">Забронировать</a>
+  </li>
+</ul>
+</section>
+</main>
+<footer class="main-footer">
+  <p class="footer-text">#VISITSEDONA</p>
+  <div class="footer-social">
+    <ul>
+      <li><a class="social-button" href="#">Twitter</a></li>
+      <li><a class="social-button" href="#">Facebook</a></li>
+      <li><a class="social-button" href="#">Youtube</a></li>
+    </ul>
+  </div>
+  <p class="footer-copyright">
+    <b>Website by</b> 
+    <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+  </p>
+</footer>
 </body>
 </html>
