--- a/index.html
+++ b/index.html
@@ -1,102 +1,96 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>City of Sedona</title>
-  </head>
-  <body>
-    <header class="main-header">
-      <nav class="main-navigation">
-        <img src="http://placehold.it/150x100" width="73" height="56" alt="Логотип City of Sedona">        
-        <ul class="site-navigation">
-          <li><a href="info.html">Информация</a></li>
-          <li><a href="gallery.html">Фото и видео</a></li>
-          <li><a href="state-map.html">Карта Штата</a></li>
-          <li><a href="catalog.html">Гостиницы</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main class="container">
-      <img src="http://placehold.it/150x100" width="1200" height="514" alt="Sedona">"
-      <h1 class="visually-hidden">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-        <section class="reasons">
-          <h2 class="visually-hidden">Причины</h2>
-            <p class="reasons-text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-            <ul class="reasons-list">
-              <li class="reason-item">
+<head>
+  <meta charset="utf-8">
+  <title>City of Sedona</title>
+</head>
+<body>
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-navigation-logo">
+        <img src="http://placehold.it/150x100" width="73" height="56" alt="Логотип City of Sedona">
+      </a>        
+      <ul class="site-navigation">
+        <li><a href="info.html">Информация</a></li>
+        <li><a href="gallery.html">Фото и видео</a></li>
+        <li><a href="state-map.html">Карта Штата</a></li>
+        <li><a href="catalog.html">Гостиницы</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main class="container">
+    <img src="http://placehold.it/150x100" width="1200" height="514" alt="Sedona">"
+    <h1 class="visually-hidden">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+    <section class="reasons">
+      <h2 class="visually-hidden">Причины</h2>
+      <p class="reasons-text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      <ul class="reasons-list">
+        <li class="reason-item">
+          <h3>Настоящий городок</h3>
+          <span>- №1 -</span>
+          <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+          <img src="http://placehold.it/150x100" width="800" height="260" alt="Настоящий городок">
+        </li>
+        <li class="reasons-item">
+          <h3>Жилье</h3>
+          <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+        </li>
+        <li class="reasons-item">
+          <h3>Еда</h3>
+          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        </li>
+        <li class="reasons-item">
+          <h3>Сувениры</h3>
+          <p>Не только китайского, но и местного производства!</p>
+        </li>
+        <li class="reason-item">
+          <h3>Там есть мост дьявола</h3>
+          <span>- №2 - </span>
+          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          <img src="http://placehold.it/150x100" width="800" height="260" alt="Мост дьявола">
+        </li>
+        <li class="reason-item">
+          <h3>Небольшая площадь</h3>
+          <span>- №3 -</span>
+          <p>Все достопримечательности находятся очень близко</p>
+        </li>
+        <li class="reason-item">
+          <h3>Красивая дорога</h3>
+          <span>- №4 - </span>
+          <p>Ехать в Седону из Лас-Вегаса совсем не скучно</p>
+        </li>
+        <li class="reason-item">
+          <h3>Мало туристов</h3>
+          <span>- №5 - </span>
+          <p>Большинство едет в Гранд Каньон и толпится там</p>
+        </li>           
+      </ul>
+    </section>
+    <section class="interest">
+      <h2 class="interest-h1">Заинтересовались?</h2>
+      <p class="interest-text">Укажите предполагаемые даты поездки,  и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <img src="http://placehold.it/150x100" width="1200" height="474" alt="Карта">
+    </section>
+    <section class="form">
+      <h3>Поиск гостиниц в Седоне</h3>
 
-                <!--нужно ли сначала указать номер причины, а потом название причины? что тогда будет заголовком h2?-->
+      <!-- Форма -->
 
-                <h3>Настоящий городок</h3>
-                <p>- №1 -</p>
-                <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
-                <img src="http://placehold.it/150x100" width="800" height="260" alt="Настоящий городок">
-                <ul class="sub-reasons">
-                  <li class="sub-reasons-item">
-                    <h4>Жилье</h4>
-                    <img src="http://placehold.it/150x100" width="80" height="77" alt="Жилье">
-                    <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-                  </li>
-                   <li class="sub-reasons-item">
-                    <h4>Еда</h4>
-                    <img src="http://placehold.it/150x100" width="75" height="73" alt="Еда">
-                    <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-                  </li>
-                   <li class="sub-reasons-item">
-                    <h4>Сувениры</h4>
-                    <img src="http://placehold.it/150x100" width="72" height="65" alt="Сувениры">
-                    <p>Не только китайского, но и местного производства!</p>
-                  </li>
-              </li>
-              <li class="reason-item">
-                <h3>Там есть мост дьявола</h3>
-                <p>- №2 - </p>
-                <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-                <img src="http://placehold.it/150x100" width="800" height="260" alt="Мост дьявола">
-              </li>
-              <li class="reason-item">
-                <h3>Небольшая площадь</h3>
-                <p>- №3 -</p>
-                <p>Все достопримечательности находятся очень близко</p>
-              </li>
-              <li class="reason-item">
-                <h3>Красивая дорога</h3>
-                <p>- №4 - </p>
-                <p>Ехать в Седону из Лас-Вегаса совсем не скучно</p>
-              </li>
-              <li class="reason-item">
-                <h3>Мало туристов</h3>
-                <p>- №5 - </p>
-                <p>Большинство едет в Гранд Каньон и толпится там</p>
-              </li>           
-          </ul>
-        </section>
-        <section class="interest">
-          <h2 class="interest-h1">Заинтересовались?</h2>
-            <p class="interest-text">Укажите предполагаемые даты поездки,  и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        </section>
-        <section class="form">
-          <span>
-          <img src="http://placehold.it/150x100" width="1200" height="474" alt="Карта"></span>
-            <h3>Поиск гостиниц в Седоне</h3>
-
-                    <!-- Форма -->
-
-        </section>
-      </main>
-    <footer class="main-footer">
-      <p class="footer-text">#VISITSEDONA</p>
-      <div class="footer-social">
-        <ul>
+    </section>
+  </main>
+  <footer class="main-footer">
+    <p class="footer-text">#VISITSEDONA</p>
+    <div class="footer-social">
+      <ul>
         <li><a class="social-button" href="#">Twitter</a></li>
         <li><a class="social-button" href="#">Facebook</a></li>
         <li><a class="social-button" href="#">Youtube</a></li>
       </ul>
-      </div>
-      <p class="footer-copyright">
-        <b>Website by</b> 
-        <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-      </p>
-    </footer>
+    </div>
+    <p class="footer-copyright">
+      <b>Website by</b> 
+      <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+    </p>
+  </footer>
 </body>
 </html>
