--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo" href="index.html">
-        <img src="http://placehold.it/150x100" width="73" height="56" alt="Логотип City of Sedona">
+        <img src="img/logo.png" width="140" height="71" alt="Логотип City of Sedona">
       </a>              
       <ul class="site-navigation">
         <li><a href="info.html">Информация</a></li>
@@ -31,7 +31,7 @@
           <h3>Amara resort & spa</h3>
           <p class=hotels-list-image>
             <a href="#">
-             <img src="http://placehold.it/150x100" width="140" height="90" alt="Amara resort & spa">
+             <img src="img/amara.jpg" width="140" height="90" alt="Amara resort & spa">
            </a>
          </p>
          <ul class="hotels-list-item-parametr">
@@ -46,7 +46,7 @@
         <h3>Desert Quail Inn</h3>
         <p class=hotels-list-image>
           <a href="#">
-           <img src="http://placehold.it/150x100" width="140" height="90" alt="Desert Quail Inn">
+           <img src="img/desert.jpg" width="140" height="90" alt="Desert Quail Inn">
          </a>
        </p>
        <ul class="hotels-list-item-parametr">
@@ -61,7 +61,7 @@
       <h3>Villas at Poco Diablo</h3>
       <p class=hotels-list-image>
         <a href="#">
-         <img src="http://placehold.it/150x100" width="140" height="90" alt="Villas at Poco Diablo">
+         <img src="img/villas.jpg" width="140" height="90" alt="Villas at Poco Diablo">
        </a>
      </p>
      <ul class="hotels-list-item-parametr">
