--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-navigation-logo">
-        <img src="http://placehold.it/150x100" width="73" height="56" alt="Логотип City of Sedona">
+        <img src="img/logo.png" width="140" height="71" alt="Логотип City of Sedona">
       </a>        
       <ul class="site-navigation">
         <li><a href="info.html">Информация</a></li>
@@ -19,7 +19,7 @@
     </nav>
   </header>
   <main class="container">
-    <img src="http://placehold.it/150x100" width="1200" height="514" alt="Sedona">"
+    <img src="img/background-photo.jpg" width="1200" height="514" alt="Sedona">"
     <h1 class="visually-hidden">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
     <section class="reasons">
       <h2 class="visually-hidden">Причины</h2>
@@ -29,7 +29,7 @@
           <h3>Настоящий городок</h3>
           <span>- №1 -</span>
           <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
-          <img src="http://placehold.it/150x100" width="800" height="260" alt="Настоящий городок">
+          <img src="img/Layer-10.jpg" width="800" height="260" alt="Настоящий городок">
         </li>
         <li class="reasons-item">
           <h3>Жилье</h3>
@@ -47,7 +47,7 @@
           <h3>Там есть мост дьявола</h3>
           <span>- №2 - </span>
           <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-          <img src="http://placehold.it/150x100" width="800" height="260" alt="Мост дьявола">
+          <img src="img/Layer-5.jpg" width="800" height="260" alt="Мост дьявола">
         </li>
         <li class="reason-item">
           <h3>Небольшая площадь</h3>
@@ -69,7 +69,7 @@
     <section class="interest">
       <h2 class="interest-h1">Заинтересовались?</h2>
       <p class="interest-text">Укажите предполагаемые даты поездки,  и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <img src="http://placehold.it/150x100" width="1200" height="474" alt="Карта">
+      <img src="img/map.jpg" width="1200" height="474" alt="Карта">
     </section>
     <section class="form">
       <h3>Поиск гостиниц в Седоне</h3>
