добавлена форма на главную страницу

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
   </header>
   <main class="container">
-    <img src="img/background-photo.jpg" width="1200" height="514" alt="Sedona">"
+    <img src="img/background-photo.jpg" width="1200" height="514" alt="Sedona">
     <h1 class="visually-hidden">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
     <section class="reasons">
       <h2 class="visually-hidden">Причины</h2>
@@ -73,9 +73,30 @@
     </section>
     <section class="form">
       <h3>Поиск гостиниц в Седоне</h3>
-
-      <!-- Форма -->
-
+      <form class="user" method="post"
+          action="https://echo.htmlacademy.ru">
+        <p>
+        <label for="date-arrival">Дата заезда</label>
+        <input id="date-arrival" type="date"
+               name="date-arrival">
+      </p>
+      <p>
+        <label for="date-depature">Дата выезда</label>
+        <input id="date-depature" type="date"
+               name="date-depature">
+      </p>
+       <p>
+        <label for="amount-adults">Взрослые</label>
+        <input id="amount-adults" type="number" min="0" value="2"
+               name="amount-adults">
+      </p>
+       <p>
+        <label for="amount-children">Дети</label>
+        <input id="amount-сhildren" type="number" min="0"
+               name="amount-children">
+      </p>      
+      <button type="submit">Найти</button>
+    </form>   
     </section>
   </main>
   <footer class="main-footer">
