правки по комментариям

--- a/catalog.html
+++ b/catalog.html
@@ -23,6 +23,16 @@
       <h1 class="visually-hidden">Поиск жилья в Cедоне</h1>
       <!--форма-->
     </section>
+
+    <section>
+      <p class="amount-result">Найдено: 3</p>
+      <p class="sorting">Сортировка</p>
+      <ul class="sorting-list">
+        <li>По цене</li>
+        <li>По типу</li>
+        <li>По рейтингу</li>
+      </ul>  
+    </section>
     <section class="hotels">
       <h2 class="visually-hidden">Список гостиниц</h2>
       <ul class="hotels-list">
