--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <h3>Настоящий городок</h3>
           <span>- №1 -</span>
           <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
-          <img src="img/Layer-10.jpg" width="800" height="260" alt="Настоящий городок">
+          <img src="img/layer-10.jpg" width="800" height="260" alt="Настоящий городок">
         </li>
         <li class="reasons-item">
           <h3>Жилье</h3>
@@ -47,7 +47,7 @@
           <h3>Там есть мост дьявола</h3>
           <span>- №2 - </span>
           <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-          <img src="img/Layer-5.jpg" width="800" height="260" alt="Мост дьявола">
+          <img src="img/layer-5.jpg" width="800" height="260" alt="Мост дьявола">
         </li>
         <li class="reason-item">
           <h3>Небольшая площадь</h3>
@@ -73,7 +73,7 @@
     </section>
     <section class="form">
       <h3>Поиск гостиниц в Седоне</h3>
-      <form class="user" method="post"
+      <form class="user" method="get"
           action="https://echo.htmlacademy.ru">
         <p>
         <label for="date-arrival">Дата заезда</label>
@@ -92,7 +92,7 @@
       </p>
        <p>
         <label for="amount-children">Дети</label>
-        <input id="amount-сhildren" type="number" min="0"
+        <input id="amount-children" type="number" min="0"
                name="amount-children">
       </p>      
       <button type="submit">Найти</button>
