--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>City of Sedona</title>
+  <link href="css/style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans&amp;subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">
