--- a/catalog.html
+++ b/catalog.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>City of Sedona</title>
+ <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans&amp;subset=cyrillic" rel="stylesheet">
-  <link href="css/normalize.css" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">
@@ -27,7 +27,7 @@
       <!--форма-->
     </section>
 
-    <section>
+    <section class="sorting-top">
       <p class="amount-result">Найдено: 3</p>
       <p class="sorting">Сортировка</p>
       <ul class="sorting-list">
@@ -52,8 +52,8 @@
           <li><b>От 4000 р.</b></li>
           <li class="hotels-list-item-rating">Рейтинг 8.5</li>
         </ul>
-        <a class="button" href="#">Подробнее</a>
-        <a class="button" href="#">Забронировать</a>
+        <a class="button-more-info" href="#">Подробнее</a>
+        <a class="button-booking" href="#">Забронировать</a>
       </li>
       <li class="hotels-list-item">
         <h3>Desert Quail Inn</h3>
@@ -67,8 +67,8 @@
         <li><b>От 3000 р.</b></li>
         <li class="hotels-list-item-rating">Рейтинг 8.9</li>
       </ul>            
-      <a class="button" href="#">Подробнее</a>
-      <a class="button" href="#">Забронировать</a>
+      <a class="button-more-info" href="#">Подробнее</a>
+      <a class="button-booking" href="#">Забронировать</a>
     </li>
     <li class="hotels-list-item">
       <h3>Villas at Poco Diablo</h3>
@@ -82,8 +82,8 @@
       <li><b>От 2000 р.</b></li>
       <li class="hotels-list-item-rating">Рейтинг 9.2</li>
     </ul>  
-    <a class="button" href="#">Подробнее</a>
-    <a class="button" href="#">Забронировать</a>
+    <a class="button-more-info" href="#">Подробнее</a>
+    <a class="button-booking" href="#">Забронировать</a>
   </li>
 </ul>
 </section>
