--- a/index.html
+++ b/index.html
@@ -23,85 +23,80 @@
   </header>
   <main class="container">
     <img src="img/background-photo.jpg" width="1200" height="514" alt="Sedona">
-    <h1 class="visually-hidden">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+    <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
     <section class="reasons">
-      <h2 class="visually-hidden">Причины</h2>
+      <h2 class="visually-hidden">Причины поехать в Седону</h2>
       <p class="reasons-text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-            <ul class="reasons-list block1">
-             <li class="reason-item">
+            <ul class="reasons-list">
+             <li class="reason-item-blue">
           <h3>Настоящий городок</h3>
           <span>- №1 -</span>
           <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
           <img src="img/layer-10.jpg" width="800" height="260" alt="Настоящий городок">
         </li>
-        <li class="reasons-item">
+        <li class="reason-item-white">
           <h3>Жилье</h3>
           <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </li>
-        <li class="reasons-item">
+        <li class="reason-item-white">
           <h3>Еда</h3>
           <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </li>
-        <li class="reasons-item">
+        <li class="reason-item-white">
           <h3>Сувениры</h3>
           <p>Не только китайского, но и местного производства!</p>
         </li>
-        <li class="reason-item">
+        <li class="reason-item-blue">
           <h3>Там есть мост дьявола</h3>
           <span>- №2 - </span>
           <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           <img src="img/layer-5.jpg" width="800" height="260" alt="Мост дьявола">
         </li>
-      </ul>
-
-      <div class="reasons-list block2">
-
-      <ul>
-        <li class="reason-item">
+        <li class="reason-item-grey">
           <h3>Небольшая площадь</h3>
           <span>- №3 -</span>
           <p>Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="reason-item">
+        <li class="reason-item-grey">
           <h3>Красивая дорога</h3>
           <span>- №4 - </span>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно</p>
         </li>
-        <li class="reason-item">
+        <li class="reason-item-grey">
           <h3>Мало туристов</h3>
           <span>- №5 - </span>
           <p>Большинство едет в Гранд Каньон и толпится там</p>
         </li>   
       </ul>    
-    </div>
-          </section>
+     </section>
     <section class="interest">
       <h2 class="interest-h1">Заинтересовались?</h2>
       <p class="interest-text">Укажите предполагаемые даты поездки,  и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <img src="img/map.jpg" width="1200" height="474" alt="Карта">
     </section>
     <section class="form">
-      <h3>Поиск гостиниц в Седоне</h3>
+      <button class="button-search" type="submit">Поиск гостиницы в Седоне</button>
+
       <form class="user" method="get"
           action="https://echo.htmlacademy.ru">
         <p class="form-field">
         <label for="date-arrival">Дата заезда</label>
-        <input id="date-arrival" type="date"
+        <input class="date-arrival" id="date-arrival" type="text"
                name="date-arrival">
       </p>
       <p class="form-field">
         <label for="date-depature">Дата выезда</label>
-        <input id="date-depature" type="date"
+        <input class="date-depature" id="date-depature" type="text"
                name="date-depature">
       </p>
        <p class="form-field">
         <label for="amount-adults">Взрослые</label>
-        <input id="amount-adults" type="number" min="0" value="2"
+        <input class="amount-adults" id="amount-adults" type="number" min="0" value="2"
                name="amount-adults">
       </p class="form-field">
        <p>
         <label for="amount-children">Дети</label>
-        <input id="amount-children" type="number" min="0"
+        <input class="amount-children" id="amount-children" type="number" min="0"
                name="amount-children">
       </p>      
       <button type="submit">Найти</button>
