--- a/catalog.html
+++ b/catalog.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
+  <div class="container">
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo" href="index.html">
@@ -102,5 +103,6 @@
     <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
   </p>
 </footer>
+</div>
 </body>
 </html>
