--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
+
+  <div class="container">
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-navigation-logo">
         <img src="img/logo.png" width="140" height="71" alt="Логотип City of Sedona">
       </a>        
-      <ul class="site-navigation-1">
+      <ul class="site-navigation">
         <li><a href="info.html">Информация</a></li>
         <li><a href="gallery.html">Фото и видео</a></li>
-      </ul>
-      <ul class="site-navigation-2">
         <li><a href="state-map.html">Карта Штата</a></li>
         <li><a href="catalog.html">Гостиницы</a></li>
       </ul>
@@ -26,13 +26,14 @@
   <main class="container">
     <div class= "background-image"><img src="img/background-photo.jpg" width="1200" height="514" alt="Sedona">
     </div>
+    <div class="center-text">
     <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-    <section class="reasons">
-      <h2 class="visually-hidden">Причины поехать в Седону</h2>
+          <h2 class="visually-hidden">Причины поехать в Седону</h2>
       <p class="reasons-text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+    </div>
             
 
-
+     <section class="reasons">
             <ul class="reasons-list">
              
 
@@ -100,7 +101,7 @@
 
 
 
-    <section class="interest">
+    <section class="center-text">
       <h2 class="interest-h1">Заинтересовались?</h2>
       <p class="interest-text">Укажите предполагаемые даты поездки,  и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <!-- <img src="img/map.jpg" width="1200" height="474" alt="Карта"> -->
@@ -139,7 +140,7 @@
     </section>
   </main>
 
-  
+
   <footer class="main-footer">
     <p class="footer-text">#VISITSEDONA</p>
     <div class="footer-social">
@@ -154,6 +155,7 @@
       <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
     </p>
   </footer>
+</div>
 </body>
 </html>
 
