базовая сетка (все сломалось)

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 
 
-    <section class="center-text">
+    <section class="interest">
       <h2 class="interest-h1">Заинтересовались?</h2>
       <p class="interest-text">Укажите предполагаемые даты поездки,  и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <!-- <img src="img/map.jpg" width="1200" height="474" alt="Карта"> -->
