--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
           <img src="img/logo.png" width="140" height="71" alt="Логотип City of Sedona">
         </a>        
         <ul class="site-navigation">
-          <li class="site-navigation-1"><a href="info.html">Информация</a></li>
-          <li class="site-navigation-2"><a href="gallery.html">Фото и видео</a></li>
-          <li class="site-navigation-3"><a href="state-map.html">Карта Штата</a></li>
-          <li class="site-navigation-4"><a href="catalog.html">Гостиницы</a></li>
+          <li class="site-navigation-item"><a href="info.html">Информация</a></li>
+          <li class="site-navigation-item"><a href="gallery.html">Фото и видео</a></li>
+          <li class="site-navigation-item"><a href="state-map.html">Карта Штата</a></li>
+          <li class="site-navigation-item"><a href="catalog.html">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
@@ -131,7 +131,11 @@
   <p class="footer-text">#VISITSEDONA</p>
   <div class="footer-social">
     <ul>
-      <li><a class="social-button" href="#"><span class="visually-hidden">Twitter</span></a></li>
+      <li><a class="social-button" href="#"><span class="visually-hidden">Twitter</span>
+
+
+
+      </a></li>
       <li><a class="social-button" href="#"><span class="visually-hidden">Facebook</span></a></li>
       <li><a class="social-button" href="#"><span class="visually-hidden">Youtube</span></a></li>
     </ul>
